Made building a shaded jar work. Made PowerShell script for building a .exe installer with incremented patch version.